Fix left pane collapse

--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -23,6 +23,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow-y: hidden;
 
   :global(.dark) & { background-color: var(--dark-bg-5); }
   :global(.light) & { background-color: var(--light-bg-5); }
